Добавляет верстку страниц доставка и оплата

--- a/src/pages/delivery.html
+++ b/src/pages/delivery.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="robots" content="noindex, nofollow" />
     <link rel="stylesheet" href="./css/style.min.css">
-    <title>Спасибо за заказ!</title>
+    <title>Доставка</title>
 </head>
 
 <body>
@@ -36,7 +36,7 @@
                             <a href="#" class="site-navigation__link">Блог</a>
                         </li>
                         <li class="site-navigation__item">
-                            <a href="delivery.html" class="site-navigation__link">Доставка</a>
+                            <a class="site-navigation__link">Доставка</a>
                         </li>
                         <li class="site-navigation__item">
                             <a href="payment.html" class="site-navigation__link">Оплата</a>
@@ -133,103 +133,32 @@
                         <a href="index.html" class="breadcrumbs__link">Главная</a>
                     </li>
                     <li class="breadcrumbs__item">
-                        <a href="basket.html" class="breadcrumbs__link">Корзина</a>
-                    </li>
-                    <li class="breadcrumbs__item">
-                        <a class="breadcrumbs__link--active">Оформление заказа</a>
+                        <a class="breadcrumbs__link--active">Доставка</a>
                     </li>
                 </ul>
             </div>
 
-            <section class="thanks-for-order">
-                <h1 class="section__title">Спасибо за заказ!</h1>
-                <ul class="thanks-for-order__list">
-                    <li class="thanks-for-order__item">
-                        Ожидайте, наш менеджер позвонит Вам завтра <br>
-                        с 8:00 до 10:00 по московскому времени. <br>
-                        Если вы пропустили звонок, то просто <br>
-                        перезвоните нам по номеру 8 (800) 000-00-00 <br>
-                        или ожидайте повторного звонка.
-                    </li>
-                    <li class="thanks-for-order__item">
-                        Изменения в статусе заказа мы будем <br>
-                        отправлять на ваш электронный адрес и по смс. <br>
-                        Так же за состоянием заказа вы можете следить из  <br>
-                        своего личного кабинета (профиль - заказы).
-                    </li>
-                    <li class="thanks-for-order__item">
-                        Если у вас есть уточняющие вопросы <br>
-                        позвоните по номеру 8 (800) 000-00-00 <br>
-                        или напишите нам на info@site.ru
-                    </li>
-                </ul>
-            </section>
-
-            <section class="order-info">
-                <h2 class="order-info__title">Информация о вашем заказе №216694</h2>
-                <ul class="basket__list basket__list--order basket__list--thanks">
-                    <li class="basket__item">
-                        <a href="product.html" class="basket__img">
-                            <img src="./assets/img/card.webp" alt="Товар." width="32" height="72">
-                        </a>
-                        <a href="product.html" class="basket__name">
-                            БИО крем для рук освежающий с лимонной мятой Alpine Organics 50 мл
-                        </a>
-                            <span class="products__count products__count--digit">
-                                1 шт.
-                            </span>
-                        <div class="basket__price-wrapper">
-                            <span class="basket__price">
-                                1 939 ₽
-                            </span>
-                        </div>
-                    </li>
-                    <li class="basket__item">
-                        <a href="product.html" class="basket__img">
-                            <img src="./assets/img/card.webp" alt="Товар." width="32" height="72">
-                        </a>
-                        <a href="product.html" class="basket__name">
-                            БИО крем для рук освежающий с лимонной мятой Alpine Organics 50 мл
-                        </a>
-                            <span class="products__count products__count--digit">
-                                1 шт.
-                            </span>
-                        <div class="basket__price-wrapper">
-                            <span class="basket__price">
-                                1 939 ₽
-                            </span>
-                        </div>
-                    </li>
-                </ul>
-                <ul class="order-info__list">
-                    <li class="order-info__item">
-                        <div class="order-info__name">Получатель:</div>
-                        <span class="order-info__descr">ООО “Lorem ipsum dolor sit amet”</span>
-                    </li>
-                    <li class="order-info__item">
-                        <div class="order-info__name">Контактный телефон:</div>
-                        <span class="order-info__descr">+79002300230</span>
-                    </li>
-                    <li class="order-info__item">
-                        <div class="order-info__name">Адрес:</div>
-                        <span class="order-info__descr">Россия, Область, Город</span>
-                    </li>
-                    <li class="order-info__item">
-                        <div class="order-info__name">Способ оплаты:</div>
-                        <span class="order-info__descr">Безналичный расчёт</span>
-                    </li>
-                    <li class="order-info__item">
-                        <div class="order-info__name">Статус оплаты:</div>
-                        <span class="order-info__payment-status order-info__payment-status--not">
-                            Не оплачено
-                        </span>
-                    </li>
-                    <li class="order-info__item">
-                        <div class="order-info__name">Способ доставки:</div>
-                        <span class="order-info__descr">Почтой России</span>
-                    </li>
-                </ul>
-                <button class="order-info__btn basket__buy">Распечатать</button>
+            <section class="delivery-payment">
+                <h1 class="section__title">Доставка</h1>
+                <span class="delivery-payment__descr">
+                    Maecenas accumsan lacus vel facilisis volutpat est velit. Consequat id porta nibh venenatis cras sed
+                    felis eget. Orci porta non pulvinar neque laoreet suspendisse. Aliquet sagittis id consectetur
+                    purus. Mauris augue neque gravida in fermentum. Risus commodo viverra maecenas accumsan lacus vel
+                    facilisis. Tempor id eu nisl nunc mi ipsum faucibus. Vel facilisis volutpat est velit egestas dui id
+                    ornare. Neque laoreet suspendisse interdum consectetur. Donec enim diam vulputate ut pharetra. Ut
+                    sem viverra aliquet eget sit amet tellus. Non tellus orci ac auctor augue mauris augue neque. Nibh
+                    mauris cursus mattis molestie. Vivamus at augue eget arcu dictum varius duis at. Commodo viverra
+                    maecenas accumsan lacus. Lobortis elementum nibh tellus molestie nunc non blandit massa enim.
+                </span>
+                <span class="delivery-payment__descr">
+                    Arcu cursus euismod quis viverra. Nibh sit amet commodo nulla. Urna porttitor rhoncus dolor purus.
+                    Nibh ipsum consequat nisl vel pretium lectus quam. Condimentum mattis pellentesque id nibh tortor.
+                    Massa massa ultricies mi quis hendrerit. Purus in massa tempor nec feugiat. Magna fringilla urna
+                    porttitor rhoncus dolor. Accumsan tortor posuere ac ut consequat. Quam nulla porttitor massa id
+                    neque aliquam vestibulum morbi. Sem fringilla ut morbi tincidunt augue interdum velit. Id aliquet
+                    risus feugiat in ante metus dictum at. Lectus proin nibh nisl condimentum id. Enim nulla aliquet
+                    porttitor lacus luctus accumsan.
+                </span>
             </section>
 
         </main>
@@ -286,7 +215,7 @@
                                         <a href="category.html" class="footer__link">Обучение</a>
                                     </li>
                                     <li class="footer__item">
-                                        <a href="delivery.html" class="footer__link">Доставка</a>
+                                        <a class="footer__link">Доставка</a>
                                     </li>
                                     <li class="footer__item">
                                         <a href="payment.html" class="footer__link">Оплата</a>
@@ -498,8 +427,8 @@
         </footer>
     </div>
 
-    <div class="decorative decorative__right decorative__right--making-order"></div>
-    <div class="decorative decorative__left decorative__left--making-order"></div>
+    <div class="decorative decorative__right decorative__right--favorites"></div>
+    <div class="decorative decorative__left decorative__left--delivery"></div>
     <div class="decorative decorative__right decorative__right--bottom"></div>
 </body>
 
