--- a/src/pages/making-order.html
+++ b/src/pages/making-order.html
@@ -36,10 +36,10 @@
                             <a href="#" class="site-navigation__link">Блог</a>
                         </li>
                         <li class="site-navigation__item">
-                            <a href="#" class="site-navigation__link">Доставка</a>
+                            <a href="delivery.html" class="site-navigation__link">Доставка</a>
                         </li>
                         <li class="site-navigation__item">
-                            <a href="#" class="site-navigation__link">Оплата</a>
+                            <a href="payment.html" class="site-navigation__link">Оплата</a>
                         </li>
                         <li class="site-navigation__item">
                             <a href="#" class="site-navigation__link">Контакты</a>
@@ -387,10 +387,10 @@
                                         <a href="category.html" class="footer__link">Обучение</a>
                                     </li>
                                     <li class="footer__item">
-                                        <a href="category.html" class="footer__link">Доставка</a>
+                                        <a href="delivery.html" class="footer__link">Доставка</a>
                                     </li>
                                     <li class="footer__item">
-                                        <a href="category.html" class="footer__link">Оплата</a>
+                                        <a href="payment.html" class="footer__link">Оплата</a>
                                     </li>
                                     <li class="footer__item">
                                         <a href="category.html" class="footer__link">Гарантия</a>
