--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -30,7 +30,7 @@
                     </select>
                     <ul class="first-row__site-navigation">
                         <li class="site-navigation__item">
-                            <a href="#" class="site-navigation__link">О компании</a>
+                            <a href="company.html" class="site-navigation__link">О компании</a>
                         </li>
                         <li class="site-navigation__item">
                             <a href="#" class="site-navigation__link">Блог</a>
@@ -42,7 +42,7 @@
                             <a href="payment.html" class="site-navigation__link">Оплата</a>
                         </li>
                         <li class="site-navigation__item">
-                            <a href="#" class="site-navigation__link">Контакты</a>
+                            <a href="contacts.html" class="site-navigation__link">Контакты</a>
                         </li>
                         <li class="site-navigation__item">
                             <a href="#" class="site-navigation__link">Обучение</a>
@@ -983,7 +983,7 @@
                     <form action="#" class="main-banner__form">
                         <label class="main-banner__tel-wrapper">
                             <span class="visually-hidden">Введите ваш номер телефона.</span>
-                            <input type="text" class="main-banner__tel-input"
+                            <input type="tel" class="main-banner__tel-input"
                                 placeholder="+7 ( _ _ _ ) _ _ _ - _ _ - _ _ " required>
                         </label>
                         <button type="submit" class="main-banner__btn">Отправить заявку</button>
@@ -1161,7 +1161,7 @@
                                 <h3 class="footer__title footer__title--list">О компании</h3>
                                 <ul class="footer__list">
                                     <li class="footer__item">
-                                        <a href="category.html" class="footer__link">О нас</a>
+                                        <a href="company.html" class="footer__link">О нас</a>
                                     </li>
                                     <li class="footer__item">
                                         <a href="category.html" class="footer__link">Обучение</a>
