Делает правки верстки

--- a/src/pages/favorites.html
+++ b/src/pages/favorites.html
@@ -373,7 +373,7 @@
         <footer class="footer">
             <div class="footer__content">
                 <div class="footer__row footer__row--first">
-                    <img src="./assets/img/main-logo.svg" alt="Логотип БьютиМедГрупп." class="footer__main-logo"
+                    <img src="./assets/img/footer-logo.svg" alt="Логотип БьютиМедГрупп." class="footer__main-logo"
                         width="222" height="100">
                     <a href="tel:88000000000" class="footer__phone">
                         <svg class="footer__phone__icon" width="24" height="24" viewBox="0 0 24 24" fill="none"
