--- a/src/pages/delivery.html
+++ b/src/pages/delivery.html
@@ -45,7 +45,7 @@
                             <a href="contacts.html" class="site-navigation__link">Контакты</a>
                         </li>
                         <li class="site-navigation__item">
-                            <a href="#" class="site-navigation__link">Обучение</a>
+                            <a href="training.html" class="site-navigation__link">Обучение</a>
                         </li>
                         <li class="site-navigation__item">
                             <a href="#" class="site-navigation__link">Отзывы</a>
@@ -212,7 +212,7 @@
                                         <a href="company.html" class="footer__link">О нас</a>
                                     </li>
                                     <li class="footer__item">
-                                        <a href="category.html" class="footer__link">Обучение</a>
+                                        <a href="training.html" class="footer__link">Обучение</a>
                                     </li>
                                     <li class="footer__item">
                                         <a class="footer__link">Доставка</a>
