--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -33,7 +33,7 @@
                             <a href="company.html" class="site-navigation__link">О компании</a>
                         </li>
                         <li class="site-navigation__item">
-                            <a href="#" class="site-navigation__link">Блог</a>
+                            <a href="blog.html" class="site-navigation__link">Блог</a>
                         </li>
                         <li class="site-navigation__item">
                             <a href="delivery.html" class="site-navigation__link">Доставка</a>
@@ -1190,10 +1190,10 @@
                                 <h3 class="footer__title footer__title--interesting">Интересное</h3>
                                 <ul class="footer__list">
                                     <li class="footer__item">
-                                        <a href="category.html" class="footer__link">Новости</a>
+                                        <a href="blog.html" class="footer__link">Новости</a>
                                     </li>
                                     <li class="footer__item">
-                                        <a href="category.html" class="footer__link">Статьи</a>
+                                        <a href="blog.html" class="footer__link">Статьи</a>
                                     </li>
                                     <li class="footer__item">
                                         <a href="category.html" class="footer__link">Вопрос-Ответ</a>
