Добавляет верстку страницы вебинара

--- a/src/pages/training.html
+++ b/src/pages/training.html
@@ -256,7 +256,7 @@
                                     <span class="training-item__date">17 мая 2022 в 12:00</span>
                                     <img src="./assets/img/training/training.webp" alt="Декоративное изображение."
                                         class="training-item__img">
-                                    <a href="#" class="basket__buy">Онлайн</a>
+                                    <a href="webinar.html" class="basket__buy">Онлайн</a>
                                 </div>
                                 <div class="training-item__right-col">
                                     <a href="#" class="training-item__name">
@@ -329,7 +329,7 @@
                                     <span class="training-item__date">17 мая 2022 в 12:00</span>
                                     <img src="./assets/img/training/training.webp" alt="Декоративное изображение."
                                         class="training-item__img">
-                                    <a href="#" class="basket__buy">Онлайн</a>
+                                    <a href="webinar.html" class="basket__buy">Онлайн</a>
                                 </div>
                                 <div class="training-item__right-col">
                                     <a href="#" class="training-item__name">
@@ -402,7 +402,7 @@
                                     <span class="training-item__date">17 мая 2022 в 12:00</span>
                                     <img src="./assets/img/training/training.webp" alt="Декоративное изображение."
                                         class="training-item__img">
-                                    <a href="#" class="basket__buy">Онлайн</a>
+                                    <a href="webinar.html" class="basket__buy">Онлайн</a>
                                 </div>
                                 <div class="training-item__right-col">
                                     <a href="#" class="training-item__name">
@@ -475,7 +475,7 @@
                                     <span class="training-item__date">17 мая 2022 в 12:00</span>
                                     <img src="./assets/img/training/training.webp" alt="Декоративное изображение."
                                         class="training-item__img">
-                                    <a href="#" class="basket__buy">Онлайн</a>
+                                    <a href="webinar.html" class="basket__buy">Онлайн</a>
                                 </div>
                                 <div class="training-item__right-col">
                                     <a href="#" class="training-item__name">
@@ -548,7 +548,7 @@
                                     <span class="training-item__date">17 мая 2022 в 12:00</span>
                                     <img src="./assets/img/training/training.webp" alt="Декоративное изображение."
                                         class="training-item__img">
-                                    <a href="#" class="basket__buy">Онлайн</a>
+                                    <a href="webinar.html" class="basket__buy">Онлайн</a>
                                 </div>
                                 <div class="training-item__right-col">
                                     <a href="#" class="training-item__name">
