Добавляет страницу с отдельной статьей

--- a/src/pages/category.html
+++ b/src/pages/category.html
@@ -466,37 +466,37 @@
                             <div class="main-news__content">
                                 <ul class="main-news__list">
                                     <li class="main-news__item">
-                                        <a href="#">
+                                        <a href="article.html">
                                             <img src="./assets/img/news1.webp" alt="Превью новости."
                                                 class="main-news__img" width="328" height="240">
                                         </a>
                                         <div class="main-news__textcontent">
                                             <span class="main-news__date">22.10.2021</span>
-                                            <a href="#" class="main-news__name">Odio morbi quis commodo odio aenean sed
+                                            <a href="article.html" class="main-news__name">Odio morbi quis commodo odio aenean sed
                                                 adipiscing
                                                 diam.</a>
                                             <span class="main-news__description">Turpis nunc eget lorem dolor sed
                                                 viverra.
                                                 Ipsum dolor
                                                 sit amet consectetur adipiscing.</span>
-                                            <a href="#" class="main-news__link">Читать полностью</a>
+                                            <a href="article.html" class="main-news__link">Читать полностью</a>
                                         </div>
                                     </li>
                                     <li class="main-news__item">
-                                        <a href="#">
+                                        <a href="article.html">
                                             <img src="./assets/img/news2.webp" alt="Превью новости."
                                                 class="main-news__img" width="328" height="240">
                                         </a>
                                         <div class="main-news__textcontent">
                                             <span class="main-news__date">22.10.2021</span>
-                                            <a href="#" class="main-news__name">Odio morbi quis commodo odio aenean sed
+                                            <a href="article.html" class="main-news__name">Odio morbi quis commodo odio aenean sed
                                                 adipiscing
                                                 diam.</a>
                                             <span class="main-news__description">Turpis nunc eget lorem dolor sed
                                                 viverra.
                                                 Ipsum dolor
                                                 sit amet consectetur adipiscing.</span>
-                                            <a href="#" class="main-news__link">Читать полностью</a>
+                                            <a href="article.html" class="main-news__link">Читать полностью</a>
                                         </div>
                                     </li>
                                 </ul>
