--- a/src/pages/company.html
+++ b/src/pages/company.html
@@ -197,7 +197,7 @@
                         </div>
                         <div class="about-us-slider__text">
                             <span class="about-us-slider__name">Name Surname</span>
-                            <span>Congue nisi vitae suscipit tellus mauris a diam maecenas</span>
+                            <span>Основатель компании</span>
                         </div>
                     </div>
                 </div>
