--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1046,7 +1046,7 @@
                                 <span class="main-news__description">Turpis nunc eget lorem dolor sed viverra. Ipsum
                                     dolor
                                     sit amet consectetur adipiscing.</span>
-                                <a href="#" class="main-news__link">Читать полностью</a>
+                                <a href="article.html" class="main-news__link">Читать полностью</a>
                             </div>
                         </li>
                         <li class="main-news__item">
@@ -1059,7 +1059,7 @@
                                 <span class="main-news__description">Turpis nunc eget lorem dolor sed viverra. Ipsum
                                     dolor
                                     sit amet consectetur adipiscing.</span>
-                                <a href="#" class="main-news__link">Читать полностью</a>
+                                <a href="article.html" class="main-news__link">Читать полностью</a>
                             </div>
                         </li>
                         <li class="main-news__item">
@@ -1072,7 +1072,7 @@
                                 <span class="main-news__description">Turpis nunc eget lorem dolor sed viverra. Ipsum
                                     dolor
                                     sit amet consectetur adipiscing.</span>
-                                <a href="#" class="main-news__link">Читать полностью</a>
+                                <a href="article.html" class="main-news__link">Читать полностью</a>
                             </div>
                         </li>
                     </ul>
