--- a/src/pages/training.html
+++ b/src/pages/training.html
@@ -256,10 +256,10 @@
                                     <span class="training-item__date">17 мая 2022 в 12:00</span>
                                     <img src="./assets/img/training/training.webp" alt="Декоративное изображение."
                                         class="training-item__img">
-                                    <a href="webinar.html" class="basket__buy">Онлайн</a>
+                                    <a href="#" class="basket__buy">Онлайн</a>
                                 </div>
                                 <div class="training-item__right-col">
-                                    <a href="#" class="training-item__name">
+                                    <a href="webinar.html" class="training-item__name">
                                         Pro-Age косметология,интегративные программы сопровождения пациента как
                                         конкурентное преимущество для косметолога.
                                     </a>
@@ -329,10 +329,10 @@
                                     <span class="training-item__date">17 мая 2022 в 12:00</span>
                                     <img src="./assets/img/training/training.webp" alt="Декоративное изображение."
                                         class="training-item__img">
-                                    <a href="webinar.html" class="basket__buy">Онлайн</a>
+                                    <a href="#" class="basket__buy">Онлайн</a>
                                 </div>
                                 <div class="training-item__right-col">
-                                    <a href="#" class="training-item__name">
+                                    <a href="webinar.html" class="training-item__name">
                                         Pro-Age косметология,интегративные программы сопровождения пациента как
                                         конкурентное преимущество для косметолога.
                                     </a>
@@ -402,10 +402,10 @@
                                     <span class="training-item__date">17 мая 2022 в 12:00</span>
                                     <img src="./assets/img/training/training.webp" alt="Декоративное изображение."
                                         class="training-item__img">
-                                    <a href="webinar.html" class="basket__buy">Онлайн</a>
+                                    <a href="#" class="basket__buy">Онлайн</a>
                                 </div>
                                 <div class="training-item__right-col">
-                                    <a href="#" class="training-item__name">
+                                    <a href="webinar.html" class="training-item__name">
                                         Pro-Age косметология,интегративные программы сопровождения пациента как
                                         конкурентное преимущество для косметолога.
                                     </a>
@@ -475,10 +475,10 @@
                                     <span class="training-item__date">17 мая 2022 в 12:00</span>
                                     <img src="./assets/img/training/training.webp" alt="Декоративное изображение."
                                         class="training-item__img">
-                                    <a href="webinar.html" class="basket__buy">Онлайн</a>
+                                    <a href="#" class="basket__buy">Онлайн</a>
                                 </div>
                                 <div class="training-item__right-col">
-                                    <a href="#" class="training-item__name">
+                                    <a href="webinar.html" class="training-item__name">
                                         Pro-Age косметология,интегративные программы сопровождения пациента как
                                         конкурентное преимущество для косметолога.
                                     </a>
@@ -548,10 +548,10 @@
                                     <span class="training-item__date">17 мая 2022 в 12:00</span>
                                     <img src="./assets/img/training/training.webp" alt="Декоративное изображение."
                                         class="training-item__img">
-                                    <a href="webinar.html" class="basket__buy">Онлайн</a>
+                                    <a href="#" class="basket__buy">Онлайн</a>
                                 </div>
                                 <div class="training-item__right-col">
-                                    <a href="#" class="training-item__name">
+                                    <a href="webinar.html" class="training-item__name">
                                         Pro-Age косметология,интегративные программы сопровождения пациента как
                                         конкурентное преимущество для косметолога.
                                     </a>
