Добавляет страницу с отзывами

--- a/src/pages/category.html
+++ b/src/pages/category.html
@@ -48,7 +48,7 @@
                             <a href="training.html" class="site-navigation__link">Обучение</a>
                         </li>
                         <li class="site-navigation__item">
-                            <a href="#" class="site-navigation__link">Отзывы</a>
+                            <a href="reviews.html" class="site-navigation__link">Отзывы</a>
                         </li>
                     </ul>
                     <div class="first-row__schedule">Пн-Пт: 9:00 - 19:00, Сб: 10 - 14</div>
@@ -1677,7 +1677,7 @@
                                                     <span class="main-reviews__date">20.11.2021 в 16:43</span>
                                                 </div>
                                                 <img src="./assets/img/4stars.svg" alt="Оценка пользователя."
-                                                    class="main-reviews__grade">
+                                                    class="main-reviews__grade" width="80" height="16">
                                             </div>
                                             <div class="main-reviews__text-content">
                                                 Quis commodo odio aenean sed. Ac felis donec et odio pellentesque diam
@@ -1704,7 +1704,7 @@
                                                     <span class="main-reviews__date">20.11.2021 в 16:43</span>
                                                 </div>
                                                 <img src="./assets/img/4stars.svg" alt="Оценка пользователя."
-                                                    class="main-reviews__grade">
+                                                    class="main-reviews__grade" width="80" height="16">
                                             </div>
                                             <div class="main-reviews__text-content">
                                                 Quis commodo odio aenean sed. Ac felis donec et odio pellentesque diam
@@ -1731,7 +1731,7 @@
                                                     <span class="main-reviews__date">20.11.2021 в 16:43</span>
                                                 </div>
                                                 <img src="./assets/img/4stars.svg" alt="Оценка пользователя."
-                                                    class="main-reviews__grade">
+                                                    class="main-reviews__grade" width="80" height="16">
                                             </div>
                                             <div class="main-reviews__text-content">
                                                 Quis commodo odio aenean sed. Ac felis donec et odio pellentesque diam
@@ -1755,7 +1755,7 @@
                                     <button class="slider__btn slider__btn--prev">
                                         <span class="visually-hidden">Предыдущий слайд</span>
                                     </button>
-                                    <a href="#" class="main-reviews__show-all">Все отзывы</a>
+                                    <a href="reviews.html" class="main-reviews__show-all">Все отзывы</a>
                                     <button class="slider__btn slider__btn--next">
                                         <span class="visually-hidden">Следующий слайд</span>
                                     </button>
@@ -1980,7 +1980,7 @@
                                         <a href="category.html" class="footer__link">Гарантия</a>
                                     </li>
                                     <li class="footer__item">
-                                        <a href="category.html" class="footer__link">Отзывы</a>
+                                        <a href="reviews.html" class="footer__link">Отзывы</a>
                                     </li>
                                     <li class="footer__item">
                                         <a href="category.html" class="footer__link">Реквизиты</a>
