--- a/src/pages/product.html
+++ b/src/pages/product.html
@@ -48,7 +48,7 @@
                             <a href="training.html" class="site-navigation__link">Обучение</a>
                         </li>
                         <li class="site-navigation__item">
-                            <a href="#" class="site-navigation__link">Отзывы</a>
+                            <a href="reviews.html" class="site-navigation__link">Отзывы</a>
                         </li>
                     </ul>
                     <div class="first-row__schedule">Пн-Пт: 9:00 - 19:00, Сб: 10 - 14</div>
@@ -317,26 +317,30 @@
                     </ul>
                 </div>
                 <div class="main__tabs__content">
-                    <span class="products-full-info__descr">
-                        Шампунь для защиты цвета с формулой против желтизны особенно мягко очищает волосы, поддерживает
-                        их сочный цвет, защищает от потери влаги, придает кристальный блеск. Подходит для создания
-                        благородного «стального» оттенка на седых волосах. Фиолетовые пигменты приглушают
-                        желто-золотистые оттенки, а холодные тона становятся ярче.
-                    </span>
-                    <div class="products-full-info__imgs">
-                        <img src="./assets/img/product/product.webp" alt="Фото товара." class="products-full-info-img"
-                            width="448" height="299">
-                        <img src="./assets/img/product/product.webp" alt="Фото товара." class="products-full-info-img"
-                            width="448" height="299">
+                    <div class="main__tabs__content-item main__tabs__content-item--active">
+                        <span class="products-full-info__descr">
+                            Шампунь для защиты цвета с формулой против желтизны особенно мягко очищает волосы,
+                            поддерживает
+                            их сочный цвет, защищает от потери влаги, придает кристальный блеск. Подходит для создания
+                            благородного «стального» оттенка на седых волосах. Фиолетовые пигменты приглушают
+                            желто-золотистые оттенки, а холодные тона становятся ярче.
+                        </span>
+                        <div class="products-full-info__imgs">
+                            <img src="./assets/img/product/product.webp" alt="Фото товара."
+                                class="products-full-info-img" width="448" height="299">
+                            <img src="./assets/img/product/product.webp" alt="Фото товара."
+                                class="products-full-info-img" width="448" height="299">
+                        </div>
+                        <span class="products-full-info__descr">
+                            Роскошный платиновый блонд! Обладательницы блонда знают, что это не только цвет волос, но и
+                            стиль жизни. Однако светлые волосы нуждаются в особом уходе. No Yellow Shampoo .07 Crystal –
+                            лучшее средство для поддержания великолепного холодного оттенка. Экстракт подсолнечника,
+                            содержащийся в шампуне, нейтрализует свободные радикалы, вызываемые УФ-излучением. Комплекс
+                            защиты цвета предохраняет от потери пигментов и значительно повышает его стойкость.
+                            Увлажняющие
+                            компоненты благотворно действуют на кожу головы и волосы.
+                        </span>
                     </div>
-                    <span class="products-full-info__descr">
-                        Роскошный платиновый блонд! Обладательницы блонда знают, что это не только цвет волос, но и
-                        стиль жизни. Однако светлые волосы нуждаются в особом уходе. No Yellow Shampoo .07 Crystal –
-                        лучшее средство для поддержания великолепного холодного оттенка. Экстракт подсолнечника,
-                        содержащийся в шампуне, нейтрализует свободные радикалы, вызываемые УФ-излучением. Комплекс
-                        защиты цвета предохраняет от потери пигментов и значительно повышает его стойкость. Увлажняющие
-                        компоненты благотворно действуют на кожу головы и волосы.
-                    </span>
                 </div>
             </section>
 
@@ -581,7 +585,8 @@
                                 <span class="main-reviews__username">Алиса</span>
                                 <span class="main-reviews__date">20.11.2021 в 16:43</span>
                             </div>
-                            <img src="./assets/img/4stars.svg" alt="Оценка пользователя." class="main-reviews__grade">
+                            <img src="./assets/img/4stars.svg" alt="Оценка пользователя." class="main-reviews__grade"
+                                width="80" height="16">
                         </div>
                         <div class="main-reviews__text-content">
                             Quis commodo odio aenean sed. Ac felis donec et odio pellentesque diam volutpat commodo. Ut
@@ -602,7 +607,8 @@
                                 <span class="main-reviews__username">Алиса</span>
                                 <span class="main-reviews__date">20.11.2021 в 16:43</span>
                             </div>
-                            <img src="./assets/img/4stars.svg" alt="Оценка пользователя." class="main-reviews__grade">
+                            <img src="./assets/img/4stars.svg" alt="Оценка пользователя." class="main-reviews__grade"
+                                width="80" height="16">
                         </div>
                         <div class="main-reviews__text-content">
                             Quis commodo odio aenean sed. Ac felis donec et odio pellentesque diam volutpat commodo. Ut
@@ -623,7 +629,8 @@
                                 <span class="main-reviews__username">Алиса</span>
                                 <span class="main-reviews__date">20.11.2021 в 16:43</span>
                             </div>
-                            <img src="./assets/img/4stars.svg" alt="Оценка пользователя." class="main-reviews__grade">
+                            <img src="./assets/img/4stars.svg" alt="Оценка пользователя." class="main-reviews__grade"
+                                width="80" height="16">
                         </div>
                         <div class="main-reviews__text-content">
                             Quis commodo odio aenean sed. Ac felis donec et odio pellentesque diam volutpat commodo. Ut
@@ -638,7 +645,7 @@
                         </div>
                     </li>
                 </ul>
-                <a href="#" class="main-reviews__show-all">Все отзывы</a>
+                <a href="reviews.html" class="main-reviews__show-all">Все отзывы</a>
             </section>
 
             <!-- вопрос ответ -->
@@ -795,7 +802,7 @@
                                         <a href="category.html" class="footer__link">Гарантия</a>
                                     </li>
                                     <li class="footer__item">
-                                        <a href="category.html" class="footer__link">Отзывы</a>
+                                        <a href="reviews.html" class="footer__link">Отзывы</a>
                                     </li>
                                     <li class="footer__item">
                                         <a href="category.html" class="footer__link">Реквизиты</a>
