--- a/src/pages/company.html
+++ b/src/pages/company.html
@@ -48,7 +48,7 @@
                             <a href="training.html" class="site-navigation__link">Обучение</a>
                         </li>
                         <li class="site-navigation__item">
-                            <a href="#" class="site-navigation__link">Отзывы</a>
+                            <a href="reviews.html" class="site-navigation__link">Отзывы</a>
                         </li>
                     </ul>
                     <div class="first-row__schedule">Пн-Пт: 9:00 - 19:00, Сб: 10 - 14</div>
@@ -266,7 +266,7 @@
                                         <a href="category.html" class="footer__link">Гарантия</a>
                                     </li>
                                     <li class="footer__item">
-                                        <a href="category.html" class="footer__link">Отзывы</a>
+                                        <a href="reviews.html" class="footer__link">Отзывы</a>
                                     </li>
                                     <li class="footer__item">
                                         <a href="category.html" class="footer__link">Реквизиты</a>
