Добавляет верстку страницы faq

--- a/src/pages/reviews.html
+++ b/src/pages/reviews.html
@@ -145,6 +145,7 @@
                         <li class="main__tabs__item">Отзывы клиентов</li>
                         <li class="main__tabs__item main__tabs__item--active">Отзовики</li>
                     </ul>
+                    <button class="reviews__btn footer__application">Оставить отзыв</button>
                 </div>
                 <div class="main__tabs__content">
                     <div class="main__tabs__content-item">
