--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1219,7 +1219,7 @@
                                         <a href="blog.html" class="footer__link">Статьи</a>
                                     </li>
                                     <li class="footer__item">
-                                        <a href="category.html" class="footer__link">Вопрос-Ответ</a>
+                                        <a href="faq.html" class="footer__link">Вопрос-Ответ</a>
                                     </li>
                                 </ul>
                             </div>
